syntax = "proto3";

option csharp_namespace = "ProtobufTest.Server.GrpcService";

package calculator;

service Calculator {
	rpc GetSum (CalculateRequest) returns (CalculateReply);
}

message CalculateRequest {
	int32 number1 = 1;
	int32 number2 = 2;
}

message CalculateReply {
	int32 Sum = 1;
}